# arc-raiders-tg-bot

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_chat_timezone_settings.py
app/: __init__.py  main.py
app/application/: exceptions.py
app/application/dto/: event_definition_dto.py  event_summary_dto.py  map_definition_dto.py  scheduled_event_dto.py
app/application/services/: catalog_resolver.py  catalog_service.py  event_service.py  event_summary_service.py  notification_service.py  subscription_service.py  timezone_service.py
app/bot/: router.py  sender.py
app/bot/formatters/: __init__.py  error_formatter.py  (+6 more)
app/common/: __init__.py  config.py  text_normalizer.py  time_utils.py  timezone.py
scripts/: _common.ps1  migrate-up.ps1  run-bot.ps1  run-tests.ps1
tests/: conftest.py
tests/integration/: test_catalog_refresh.py  test_live_metaforge_api.py  test_menu_flow.py  test_notification_dispatch.py  test_schedule_refresh.py  test_subscription_flow.py
tests/unit/: test_catalog_resolver.py  test_command_parser.py  test_event_summary_service.py  test_events_formatter.py  test_events_handler.py  test_events_summary_formatter_timezone.py  test_help_formatter.py  test_menu_callbacks.py  test_menu_handler.py  test_menu_markup.py  test_metaforge_provider.py  test_notification_service.py  test_notifications_formatter.py  test_persistence_models.py  test_scheduler_jobs.py  test_subscription_matching.py  test_text_normalizer.py  test_timezone_service.py
(+43 files in other folders)
