[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-raiders-tg-bot"
version = "0.1.0"
description = "Telegram bot for ARC Raiders event tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4.0",
    "SQLAlchemy>=2.0.36,<3.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.10,<3.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_api: tests that call the real external API",
]

[tool.setuptools.packages.find]
include = ["app*"]
